@startuml
title TournaBad : MPD simplifié

skinparam shadowing false
skinparam linetype ortho

entity "users" as users {
  *id : bigint
  --
  name : varchar
  email : varchar
  password : varchar
}

entity "tournaments" as tournaments {
  *id : bigint
  --
  creator_id : bigint <<FK>>
  name : varchar
  starts_on : date
  courts_count : integer
  round_duration_seconds : integer
  status : varchar
  format : varchar
  team_assignment_mode : varchar
  team_size : tinyint
  team_display_mode : varchar
}

entity "players" as players {
  *id : bigint
  --
  tournament_id : bigint <<FK>>
  created_by : bigint <<FK>>
  first_name : varchar
  is_active : boolean
  points : integer
}

entity "rounds" as rounds {
  *id : bigint
  --
  tournament_id : bigint <<FK>>
  round_number : integer
  status : varchar
  generated_at : datetime
}

entity "tournament_matches" as matches {
  *id : bigint
  --
  tournament_id : bigint <<FK>>
  round_id : bigint <<FK>>
  court_number : integer
  match_type : varchar
  status : varchar
}

entity "match_players" as match_players {
  *id : bigint
  --
  tournament_match_id : bigint <<FK>>
  player_id : bigint <<FK>>
  team_number : integer
}

entity "match_scores" as scores {
  *id : bigint
  --
  tournament_match_id : bigint <<FK>>
  recorded_by : bigint <<FK>>
  team_one_score : integer
  team_two_score : integer
  recorded_at : datetime
}

entity "round_waiting_players" as waiting {
  *id : bigint
  --
  round_id : bigint <<FK>>
  player_id : bigint <<FK>>
}

entity "tournament_teams" as teams {
  *id : bigint
  --
  tournament_id : bigint <<FK>>
  name : varchar
  team_label : varchar
  position : smallint
}

entity "tournament_team_players" as team_players {
  *id : bigint
  --
  tournament_team_id : bigint <<FK>>
  player_id : bigint <<FK>>
  position : smallint
}

users "0..1" -- "0..*" tournaments : creator_id
users "0..1" -- "0..*" players : created_by
users "0..1" -- "0..*" scores : recorded_by

tournaments "1" -- "0..*" players : tournament_id
tournaments "1" -- "0..*" rounds : tournament_id
tournaments "1" -- "0..*" matches : tournament_id

rounds "1" -- "0..*" matches : round_id
rounds "1" -- "0..*" waiting : round_id

players "1" -- "0..*" waiting : player_id

matches "1" -- "0..*" match_players : tournament_match_id
players "1" -- "0..*" match_players : player_id

matches "1" -- "0..1" scores : tournament_match_id

tournaments "1" -- "0..*" teams : tournament_id
teams "1" -- "0..*" team_players : tournament_team_id
players "1" -- "0..*" team_players : player_id

note right of match_players
  Table de liaison :
  elle indique quels joueurs
  participent au match et dans
  quelle equipe ils jouent.
end note

@enduml
